2009-11-17  Sebastien Pouliot  <sebastien@ximian.com>

	* security.c: Do not consider System.Xml.dll and Microsoft.
	VisualBasic.dll as platform code since, right now, they do not
	contain any [SecurityCritical] nor [SecuritySafeCritical] code

2009-11-17  Alan McGovern  <amcgovern@novell.com>

	* grid.h:
	* grid.cpp: We need to store the sizes of all the grid
	  segments immediately after we finish measuring them. These
	  sizes are used as our base values when deciding if we should
	  expand star rows/cols. The rules for expanding star
	  rows/cols now make sense :)

2009-11-17  Jeffrey Stedfast  <fejj@novell.com>

	* uri.cpp (Combine): Use different combining rules for 1.0 apps
	(if the relative_path starts with a '/', always replace the path
	rather than combining).

2009-11-17  Alan McGovern  <amcgovern@novell.com>

	* grid.cpp: Remove a bunch of code from Grid::ArrangeOverride
	  which isn't required anymore.

2009-11-17  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mediaelement.cpp: Fix compiler warning.

2009-11-17  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline-ui.cpp|h: Distinguish between user initiated download
	requests and automatic download requests - if the user asked us to
	download the codecs, show the ui even if the user previously selected
	to not be asked about codec downloads again.

	* mediaelement.cpp: When requesting a codec download, indicate that the
	user did not initiate this request, it's an automatic request.

2009-11-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mms-downloader.cpp: Revert previous fix, it breaks MS DRT 938.

2009-11-16  Alan McGovern  <amcgovern@novell.com>

	* xaml.h:
	* xaml.cpp:
	* control.h:
	* template.cpp:
	* dependencyproperty.g.cpp: Revert r146166 as it has some
	  bizarre side effects.

2009-11-16  Chris Toshok  <toshok@ximian.com>

	* dependencyobject.h (class EventObject): we need to make
	AddHandler virtual so UIElement can override it and do special
	things when Loaded is poked.
